FIX in InvertedIndex (bug caused UnsupportedOperationException during indexing)